# food-manager-ocr

./: CMakeLists.txt  ground_truths.json  main.cpp
ReceiptOCR/: receiptOCR.h
string/: titlecase.cpp  titlecase.h
